--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,24 @@ img {
     background: #555;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 800px) {
     .grid-container {
         grid-template-columns: repeat(2, 1fr);
     }
-}
 
-@media (max-width: 600px) {
-    .grid-container {
-        grid-template-columns: 1fr;
+    .nav-item {
+        display: none;
+    }
+
+    .top-logo {
+        max-width: 75%;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-size: 24px;
+    }
+
+    p {
+        font-size: 20px;
     }
 }
