--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ li {
 #section2 {
     color: white;
     background-image: url('images/bg.jpg');
-
+    padding-bottom: 20px;
 }
 
 section {
@@ -50,6 +50,7 @@ img {
     background-color: rgb(245, 240, 230);
     padding: 40px 20px;
 }
+
 
 .grid-container {
     display: grid;
